k8s/minio/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - minio.trustamust.com
    secretName: letsencrypt-prod
  rules:
  - host: minio.trustamust.com
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: 9000
